avance categoria y metricas de perfil